--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   rxdart: ^0.27.7
   http: ^1.2.1
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
